--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+## VSCode files
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
-.vscode/settings.json
+## Other
 *.pdf
+.DS_Store
