--- a/cs160-project/package.json
+++ b/cs160-project/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bulma": "^0.7.5",
     "create-react-app": "^3.0.1",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "^3.0.1"
