--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
   language: python
+  install:
+  - pip install -r requirements.txt
+  - pip install .
   before_script: cd backend
   script:
     - pytest
