--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
   language: python
+  before_install: cd backend
   install:
   - pip install -r requirements.txt
-  - pip install .
-  before_script: cd backend
+  - pip install -e .
   script:
     - pytest
